# ddns

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs  server.toml
.cargo/: config.toml
.github/workflows/: publish-crates.yml  release-crates.yml
ddns/: Cargo.toml
ddns-core/: Cargo.toml
ddns-core/src/: parser.rs  wire.rs
ddns-core/src/parser/: question.rs  record.rs  sigin.rs
ddns-core/src/parser/record/: endpoint.rs
ddns-server/: Cargo.toml  server.toml
ddns-server/src/: lookup.rs  main.rs  policy.rs  publish.rs  storage.rs
ddns/examples/: README.md
ddns/src/: lib.rs  publisher.rs  resolvers.rs
ddns/src/resolvers/: h3.rs
docs/: aws-deployment.md  redis-contract.md
docs/superpowers/plans/: 2026-05-19-ddns-publisher.md
docs/superpowers/specs/: 2026-05-19-ddns-publisher-design.md
examples/: README.md  mdns_discover.rs  mdns_query.rs  publish.rs  query.rs
gmdns/: Cargo.toml
gmdns-server/: Cargo.toml  server.toml
gmdns-server/src/: config.rs  lookup.rs  main.rs  policy.rs  publish.rs
gmdns/src/: lib.rs
gmdns/src/resolvers/: mdns.rs
scripts/: update-geolite-mmdb.sh
src/: core.rs  h3.rs  http.rs  lib.rs  mdns.rs  protocol.rs  publisher.rs  publishers.rs  resolvers.rs
src/core/: parser.rs  signature.rs  wire.rs
src/core/parser/: name.rs  packet.rs  sigin.rs
src/core/parser/record/: endpoint.rs  ptr.rs  srv.rs
src/h3/: cache.rs  lookup.rs  publish.rs  request.rs
src/mdns/: protocol.rs  resolvers.rs  service.rs
src/mdns/resolvers/: mdns.rs
src/parser/record/: endpoint.rs
src/publisher/: address.rs  dispatch.rs  packet.rs
src/publishers/: address.rs  aggregate.rs  dispatch.rs  packet.rs  publisher.rs
src/resolvers/: deferred.rs  endpoint_candidates.rs  endpoint_group.rs  h3.rs  http.rs  mdns.rs  selector.rs  weak.rs
tests/: feature_surface.rs  h3_generic_surface.rs  publishers_surface.rs
tests/fixtures/: malformed.der  missing.der
