[package]
name = "dyns"
description = "DNS discovery and resolver support for DHTTP applications"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/genmeta/ddns"
readme = "README.md"
keywords = ["dhttp", "dns", "mdns", "http3", "quic"]
categories = ["network-programming", "asynchronous"]
autoexamples = false

[lib]
name = "ddns"

[dependencies]
base64 = "0.22"
bitfield-struct = "0.13"
bytes = "1"
dashmap = "6"
der = { version = "0.8.0", optional = true }
dhttp-identity = { git = "https://github.com/genmeta/dhttp.git", branch = "main" }
dquic = { git = "https://github.com/genmeta/dquic.git", branch = "feat/v0.5.1" }
flume = "0.12"
futures = "0.3"
libc = "0.2"
nom = "8"
rand = "0.10"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
] }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = "2"
sha1 = { version = "=0.11.0-rc.5", optional = true }
snafu = "0.9"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1", features = [
    "time",
    "macros",
    "net",
    "sync",
    "rt",
    "rt-multi-thread",
    "io-util",
] }
tracing = "0.1"
x509-parser = { version = "0.18", features = ["verify"] }

h3x = { version = "0.3.1", default-features = false, optional = true }
http = { version = "1", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "query",
    "rustls-no-provider",
    "system-proxy",
], optional = true }
url = { version = "2", optional = true }

clap = { version = "4", features = ["derive"], optional = true }
deadpool-redis = { version = "0.23", optional = true }
idna = { version = "1", optional = true }
maxminddb = { version = "0.26", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "1", optional = true }
tower-service = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
x509-cert = { version = "=0.3.0-rc.4", optional = true }

[features]
default = []
h3x-resolver = [
    "dep:h3x",
    "h3x/dquic",
    "h3x/hyper",
    "dep:http",
    "dep:http-body",
    "dep:http-body-util",
    "dep:url",
]
mdns-resolver = ["dep:h3x", "h3x/dquic"]
http-resolver = ["dep:reqwest", "dep:rustls-native-certs"]
server = [
    "h3x-resolver",
    "dep:clap",
    "dep:der",
    "dep:deadpool-redis",
    "dep:idna",
    "dep:maxminddb",
    "dep:reqwest",
    "dep:serde",
    "dep:sha1",
    "dep:toml",
    "dep:tower-service",
    "dep:tracing-subscriber",
    "dep:x509-cert",
]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
h3x = { version = "0.3.1", default-features = false, features = [
    "dquic",
] }
shellexpand = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "ddns-server"
path = "src/bin/ddns-server/main.rs"
required-features = ["server"]

[[example]]
name = "mdns_discover"
path = "examples/mdns_discover.rs"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"

[[example]]
name = "publish"
path = "examples/publish.rs"
required-features = ["h3x-resolver"]

[[example]]
name = "query"
path = "examples/query.rs"
required-features = ["h3x-resolver"]

[patch.crates-io]
proc-macro-error2 = { path = "patches/proc-macro-error2" }
